--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -109,6 +109,7 @@
 			<div class="guide-column-list">
 				<button type="button" class="btn-large btn-primary">btn-large</button>
 				<button type="button" class="btn-medium btn-primary">btn-medium</button>
+				<button type="button" class="btn-small btn-primary">btn-small</button>
 				<button type="button" class="btn-xsmall btn-primary">btn-xsmall</button>
 			</div>
 			<hr>
@@ -126,6 +127,8 @@
 				<a href="#" class="anchor chevron chevron-up fs-15">접기</a>
 				<a href="#" class="anchor chevron chevron-down fs-15">더보기</a>
 				<a href="#" class="anchor underline fs-15">레이블 Underline</a>
+				<button type="button" class="anchor chevron anchor-fluid">업종 전체</button>
+				<button type="button" class="anchor chevron anchor-fluid anchor-border"><span class="body-large fw-700">업종 전체</span></button>
 			</div>
 			<hr>
 
