--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -355,3 +355,19 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
     -webkit-mask-image:url(../images/snackbar/ico_snackbar_close.svg);
     mask-image:url(../images/snackbar/ico_snackbar_close.svg);
 }
+
+/* datepicker-wrap */
+.datepicker-wrap {}
+.datepicker-wrap .year {position:relative;padding:8px 60px;}
+.datepicker-wrap .year .swiper {font-size:26px;font-weight:500;color:var(--typography-black);line-height:52px;text-align:center;}
+.datepicker-wrap .year .swiper-button-prev,
+.datepicker-wrap .year .swiper-button-next {width:52px;height:52px;top:50%;margin-top:-26px;background-color:var(--surface-surface50);border-radius:50%;}
+.datepicker-wrap .year .swiper-button-prev:active,
+.datepicker-wrap .year .swiper-button-next:active {background-color:var(--surface-surface200);}
+.datepicker-wrap .year .swiper-button-prev {left:8px;}
+.datepicker-wrap .year .swiper-button-next {right:8px;}
+.datepicker-wrap .year .swiper-button-prev:after,
+.datepicker-wrap .year .swiper-button-next:after {content:'';flex:0 0 100%;width:100%;height:100%;}
+.datepicker-wrap .year .swiper-button-prev:after {background:url(../images/arrow/arrow_date_prev.svg) center center / 12px 24px no-repeat;}
+.datepicker-wrap .year .swiper-button-next:after {background:url(../images/arrow/arrow_date_next.svg) center center / 12px 24px no-repeat;}
+.datepicker-wrap .month {display:grid;grid-template-columns: repeat(4, 1fr);gap:10px;margin-top:24px;}
