--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -18,18 +18,16 @@
 	<script src="../../resources/plugins/quill/2.0.2/quill.js"></script>
 	<script src="../../resources/plugins/quill/quill-resize-module/quill-resize-module.min.js"></script>
 	<!-- jstree -->
-
 	<link rel="stylesheet" href="../../resources/plugins/jstree/3.3.16/themes/default/style.min.css">
 	<script src="../../resources/plugins/jstree/3.3.16/jstree.min.js"></script>
 	<!-- micromodal -->
 	<link rel="stylesheet" href="../../resources/plugins/micromodal/0.4.10/micromodal.css">
 	<script src="../../resources/plugins/micromodal/0.4.10/micromodal.min.js"></script>
 	<!-- sortable -->
-
 	<script src="../../resources/plugins/sortable/1.15.2/Sortable.min.js"></script>
 	<!-- sweetalert2 -->
 	<link rel="stylesheet" href="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
-	<script src="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.js"></script>
+	<script src="../../resources/plugins/sweetalert2/11.11.0/sweetalert2.min.js"></script>
 	<!-- swiper -->
 	<link rel="stylesheet" href="../../resources/plugins/swiper/11.1.1/swiper-bundle.min.css">
 	<script src="../../resources/plugins/swiper/11.1.1/swiper-bundle.min.js"></script>
@@ -42,6 +40,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../resources/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../resources/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- apexcharts -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
@@ -66,51 +66,85 @@
 </head>
 
 <body>
+
 	<div class="ui-guide">
-		<h1>Alert</h1>
-		<p>Modal Popup</p>
-
+		<h1>Modal</h1>
 		<div class="ui-guide-section">
-			<div class="ui-guide-box">
-				<div class="guide-column-list">
-					<button type="button" class="btn-large btn-primary" onclick="$swal.fire01('삭제하시겠습니까', '예', true, '아니요');">Alert1</button>
-					<button type="button" class="btn-large btn-primary" onclick="$swal.fire02('삭제하시겠습니까', 'caution', '예',  true, '아니요');">Alert2</button>
-					<button type="button" class="btn-large btn-primary" onclick="$swal.fire03('삭제하시겠습니까', '예', true, '아니요')">Alert3</button>
-					<button type="button" class="btn-large btn-primary" onclick="$swal.fire04('삭제하시겠습니까', '예', 'icon-locked', '확인')">Alert4</button>
-					<button type="button" class="btn-large btn-primary" onclick="swalFire2()">AlertCamera</button>
+			<div class="guide-column-list">
+				<a href="#" class="btn-large btn-outlined" data-micromodal-trigger="modal-datepicker-year">modal-datepicker-year</a>
 
-				</div>
 			</div>
 		</div>
 	</div>
+
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-year" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<div class="datepicker-wrap pt16">
+							<div class="year">
+								<div class="swiper swiper-year">
+									<!-- Additional required wrapper -->
+									<div class="swiper-wrapper">
+										<!-- Slides -->
+										<div class="swiper-slide">2023</div>
+										<div class="swiper-slide">2024</div>
+										<div class="swiper-slide">2025</div>
+										<div class="swiper-slide">2026</div>
+										<div class="swiper-slide">2027</div>
+									</div>
+								</div>
+								<div class="swiper-button-prev"></div>
+								<div class="swiper-button-next"></div>
+							</div>
+							<div class="month">
+								<button type="button" class="btn-small btn-outlined btn-round">1</button>
+								<button type="button" class="btn-small btn-outlined btn-round">2</button>
+								<button type="button" class="btn-small btn-outlined btn-round">3</button>
+								<button type="button" class="btn-small btn-outlined btn-round">4</button>
+								<button type="button" class="btn-small btn-outlined btn-round">5</button>
+								<button type="button" class="btn-small btn-outlined btn-round">6</button>
+								<button type="button" class="btn-small btn-outlined btn-round">7</button>
+								<button type="button" class="btn-small btn-outlined btn-round">8</button>
+								<button type="button" class="btn-small btn-outlined btn-round">9</button>
+								<button type="button" class="btn-small btn-outlined btn-round">10</button>
+								<button type="button" class="btn-small btn-outlined btn-round">11</button>
+								<button type="button" class="btn-small btn-outlined btn-round">12</button>
+							</div>
+							<div class="stroke my24"></div>
+							<p class="description info body-small fc-typography-caption">대상기간은 전월/전전월 기준 1년 이내만 가능합니다.</p>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
 	<script>
-		function swalFire2() {
-			Swal.fire({
-				showCloseButton: true,
-				reverseButtons: true,
-				confirmButtonText: '확인',
-				customClass: {
-					htmlContainer: 'mt40',
-					actions: 'btn-wrap pt40',
-					cancelButton: "btn-large btn-outlined",
-					confirmButton: "btn-large btn-primary",
-				},
-				// allowOutsideClick: false,
-				buttonsStyling: false,
-				html: `
-						<i class="icon-only icon-48 icon-camera bg-icon-gray_1"></i>
-						<strong class="title-large mt8">명함 촬영 안내</strong>
-						<p class="body-large mt8">휴대폰 세로 모드로 촬영하세요.</p>
-						<picture class="d-flex j-center mt16">
-							<source srcset="../../resources/images/@temp/image_TMP.png">
-							<img src="../../resources/images/@temp/image_TMP.png" alt="">
-						</picture>
-						`,
-			})
-		}
+		const newSwiper = new Swiper('.year .swiper', {
+			spaceBetween: 1,
+			observer: true,
+			navigation: {
+				nextEl: '.year .swiper-button-next',
+				prevEl: '.year .swiper-button-prev',
+			},
+		});
 	</script>
 
 </body>
-
 
 </html>
