--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -100,154 +100,168 @@
 			<div class="ui-guide-box">
 				<h2>icon-info</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-36 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-32 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-28 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-24 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-20 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-14 icon-info bg-icon bg-icon-default"></i>
-					<i class="icon-only icon-12 icon-info bg-icon bg-icon-default"></i>
+					<i class="icon-only icon-48 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-36 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-32 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-28 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-24 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-20 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-14 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-12 icon-info bg-icon-default"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-caution</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-36 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-32 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-28 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-24 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-20 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-14 icon-caution bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-12 icon-caution bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-caution bg-icon-gray_1"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-camera</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-36 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-32 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-28 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-24 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-20 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-14 icon-camera bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-12 icon-camera bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-camera bg-icon-gray_1"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-phone</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-36 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-32 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-28 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-24 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-20 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-14 icon-phone bg-icon bg-status-active"></i>
-					<i class="icon-only icon-12 icon-phone bg-icon bg-status-active"></i>
+					<i class="icon-only icon-48 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-36 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-32 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-28 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-24 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-20 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-14 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-12 icon-phone bg-status-active"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-sms</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-36 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-32 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-28 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-24 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-20 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-14 icon-sms bg-icon bg-status-active"></i>
-					<i class="icon-only icon-12 icon-sms bg-icon bg-status-active"></i>
+					<i class="icon-only icon-48 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-36 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-32 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-28 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-24 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-20 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-14 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-12 icon-sms bg-status-active"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-mail</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-36 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-32 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-28 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-24 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-20 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-14 icon-mail bg-icon bg-status-active"></i>
-					<i class="icon-only icon-12 icon-mail bg-icon bg-status-active"></i>
+					<i class="icon-only icon-48 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-36 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-32 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-28 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-24 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-20 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-14 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-12 icon-mail bg-status-active"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-call</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-36 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-32 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-28 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-24 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-20 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-14 icon-call bg-icon bg-status-active"></i>
-					<i class="icon-only icon-12 icon-call bg-icon bg-status-active"></i>
+					<i class="icon-only icon-48 icon-call bg-status-active"></i>
+					<i class="icon-only icon-36 icon-call bg-status-active"></i>
+					<i class="icon-only icon-32 icon-call bg-status-active"></i>
+					<i class="icon-only icon-28 icon-call bg-status-active"></i>
+					<i class="icon-only icon-24 icon-call bg-status-active"></i>
+					<i class="icon-only icon-20 icon-call bg-status-active"></i>
+					<i class="icon-only icon-14 icon-call bg-status-active"></i>
+					<i class="icon-only icon-12 icon-call bg-status-active"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-memo</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-36 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-32 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-28 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-24 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-20 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-14 icon-memo bg-icon bg-status-active"></i>
-					<i class="icon-only icon-12 icon-memo bg-icon bg-status-active"></i>
+					<i class="icon-only icon-48 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-36 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-32 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-28 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-24 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-20 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-14 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-12 icon-memo bg-status-active"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-locked</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-36 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-32 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-28 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-24 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-20 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-14 icon-locked bg-icon bg-icon-gray_1"></i>
-					<i class="icon-only icon-12 icon-locked bg-icon bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-locked bg-icon-gray_1"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-fav</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-fav bg-icon"></i>
-					<i class="icon-only icon-36 icon-fav bg-icon"></i>
-					<i class="icon-only icon-32 icon-fav bg-icon"></i>
-					<i class="icon-only icon-28 icon-fav bg-icon"></i>
-					<i class="icon-only icon-24 icon-fav bg-icon"></i>
-					<i class="icon-only icon-20 icon-fav bg-icon"></i>
-					<i class="icon-only icon-14 icon-fav bg-icon"></i>
-					<i class="icon-only icon-12 icon-fav bg-icon"></i>
+					<i class="icon-only icon-48 icon-fav"></i>
+					<i class="icon-only icon-36 icon-fav"></i>
+					<i class="icon-only icon-32 icon-fav"></i>
+					<i class="icon-only icon-28 icon-fav"></i>
+					<i class="icon-only icon-24 icon-fav"></i>
+					<i class="icon-only icon-20 icon-fav"></i>
+					<i class="icon-only icon-14 icon-fav"></i>
+					<i class="icon-only icon-12 icon-fav"></i>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
 				<h2>icon-fav-active</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-36 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-32 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-28 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-24 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-20 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-14 icon-fav-active bg-icon"></i>
-					<i class="icon-only icon-12 icon-fav-active bg-icon"></i>
+					<i class="icon-only icon-48 icon-fav-active"></i>
+					<i class="icon-only icon-36 icon-fav-active"></i>
+					<i class="icon-only icon-32 icon-fav-active"></i>
+					<i class="icon-only icon-28 icon-fav-active"></i>
+					<i class="icon-only icon-24 icon-fav-active"></i>
+					<i class="icon-only icon-20 icon-fav-active"></i>
+					<i class="icon-only icon-14 icon-fav-active"></i>
+					<i class="icon-only icon-12 icon-fav-active"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-noresult</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-noresult bg-icon-gray_1"></i>
 				</div>
 			</div>
 			<hr>
