--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -306,7 +306,8 @@ div.btn-xsmall .btn-inner {display:flex;padding:6px 0 6px 12px;}
 
 .anchor {display:inline-flex;color:var(--button-textBtn-Enabled);line-height:1;font-weight:400;}
 .anchor.chevron {align-items:center;gap:8px;white-space:nowrap;}
-.anchor-fluid {display:flex;justify-content:space-between;padding:24px 16px;}
+.anchor-fluid {display:flex;justify-content:space-between;padding:24px 16px;width:100%;}
+.anchor-border {display:flex;justify-content:space-between;height:52px;padding:0 16px;width:100%;border:1px solid var(--border-12);border-radius:8px;background-color:var(--surface-surface);line-height:1;}
 .anchor.fs-15 {padding:4px;}
 .anchor.fs-16 {padding:6px;}
 
@@ -397,7 +398,7 @@ i.ico-grid {-webkit-mask-image:url(../images/ico/ico_grid.svg);mask-image:url(..
 
 
 /* form */ 
-input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size:18px;font-weight:700;color:var(--typography-black);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);}
+input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size:18px;font-weight:700;color:var(--typography-black);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);text-align:left;line-height:1;}
 input:not([type="checkbox"],[type="radio"],[type="file"])::placeholder {color:var(--typography-placeholder);font-weight:700;}
 input:not([type="checkbox"],[type="radio"],[type="file"])[readonly] {color:var(--typography-gray);border:1px solid var(--border-4);}
 input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(--typography-placeholder);border:1px solid var(--border-4);background-color:var(--status-disabled_bg);}
@@ -406,17 +407,6 @@ input[type="search"] {-webkit-appearance:none;align-items:center;}
 input[type="search"]::-webkit-search-cancel-button {-webkit-appearance:none;width:24px;height:24px;flex:0 0 24px;margin-right:-3px;margin-left:0;background:url(../images/btn/ico_close.svg);align-items:center;}
 input[type="file"]:not(.inp-file) {appearance:none;-webkit-appearance:none;position:absolute;opacity:0;z-index:-100;width:0!important;height:0!important;padding:0!important;}
 input[type="file"]::-webkit-file-upload-button {display:none;}
-
-input[type="tel"]:after {content:';a';}
-
-input[type="date"],
-input[type="datetime-local"] {position:relative;appearance:none;-webkit-appearance:none;}
-input[type="date"]::-webkit-date-and-time-value,
-input[type="datetime-local"]::-webkit-date-and-time-value {flex:1 1 100%;width:calc(100% - 24px);}
-input[type="date"]::-webkit-calendar-picker-indicator,
-input[type="datetime-local"]::-webkit-calendar-picker-indicator {content:'';display:flex;align-items:center;justify-content:center;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-datepcier.svg) right center / 24px 24px no-repeat;padding:0;position:relative;z-index:1;}
-input[type="date"]:after,
-input[type="datetime-local"]:after {content:'';position:absolute;right:0;top:50%;transform:translateY(-50%);flex:0 0 24px;width:24px;height:100%;background:url(../images/form/form-datepcier.svg) right center / 24px 24px no-repeat;z-index:0;}
 
 [data-datepicker]{background-image:url(../images/form/form-datepcier.svg);background-position:right center;background-size:24px 24px;background-repeat:no-repeat;}
 
@@ -432,12 +422,12 @@ textarea[disabled] {color:var(--typography-placeholder);border:1px solid var(--b
 
 /* select {appearance:none;-webkit-appearance:none;font-size:16px;font-weight:700;color:var(--gray900);border-radius:6px;padding:0 34px 0 0;width:100%;height:50px;border:0;background:url(../images/form/form-select.svg) right center / 24px 24px no-repeat var(--white);} */
 /* select[disabled] {background-color:var(--graye6);color:var(--graya7);} */
-button.select {display:flex;font-size:18px;font-weight:700;line-height:1;gap:8px;border-radius:8px;border:1px solid var(--border-12);background-color:var(--surface-surface);height:52px;padding:16px;align-items:center;justify-content:space-between;}
+button.select {display:flex;font-size:18px;font-weight:700;line-height:1;gap:8px;border-radius:8px;border:1px solid var(--border-12);background-color:var(--surface-surface);height:52px;padding:16px;align-items:center;justify-content:space-between;width:100%;}
 button.select:empty:before {content:attr(data-placeholder);color:var(--typography-placeholder);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;width:100%;}
 button.select span {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 button.select:after {content:'';flex:0 0 24px;width:24px;height:24px;background:url(../images/form/select-chevron-down.svg) center center / contain no-repeat;}
 
-button.select.is-modal-open {border:2px solid var(--status-focused);padding:15px;}
+button.select.is-modal-open {outline:2px solid var(--status-focused);padding:16px;outline-offset:-1px;}
 button.select.is-modal-open:after {background:url(../images/form/select-chevron-up.svg) center center / contain no-repeat;}
 /* input-wrap */
 .input-wrap {position:relative;}
@@ -456,14 +446,20 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
 .input-wrap.input-btn input:not(:placeholder-shown) ~ button {opacity:1;}
 .input-wrap.input-btn input:placeholder-shown ~ button.input-search,
 .input-wrap.input-btn input:placeholder-shown ~ button.input-password {opacity:1;}
-.input-wrap.input-btn:not(:focus-within) .input-remove,
-.input-wrap.input-btn:not(:focus-within) .input-remove-small {opacity:0;}
+.input-wrap.input-btn:not(:focus-within) ~ .input-remove,
+.input-wrap.input-btn:not(:focus-within) ~ .input-remove-small {opacity:0;}
 .input-wrap.input-btn .input-remove {-webkit-mask-image:url(../images/btn/ico_close.svg);mask-image:url(../images/btn/ico_close.svg);}
-.input-wrap.input-btn .input-remove-small {width:24px;height:24px;position:absolute;right:50px;top:50%;margin-top:-12px;-webkit-mask-image:url(../images/btn/ico_close.svg);mask-image:url(../images/btn/ico_close.svg);}
+.input-wrap.input-btn .input-remove-small {width:24px;height:24px;position:absolute;right:50px;top:50%;margin-top:-12px;-webkit-mask-image:url(../images/btn/btn_close_small.svg);mask-image:url(../images/btn/btn_close_small.svg);}
 .input-wrap.input-btn .input-search {-webkit-mask-image:url(../images/btn/ico_search.svg);mask-image:url(../images/btn/ico_search.svg);}
 .input-wrap.input-btn .input-password {-webkit-mask-image:url(../images/btn/ico_password.svg);mask-image:url(../images/btn/ico_password.svg);}
 .input-wrap.input-btn input[disabled] ~ button {background-color:var(--icon-disabled);}
 .input-wrap.input-btn input[disabled] ~ .input-remove {display:none;}
+
+/* input-datepicker */
+.input-wrap.input-datepicker {display:flex;align-items:center;border-radius:8px;border:1px solid var(--border-12);font-size:18px;line-height:22px;font-weight:700;color:var(--typography-black);gap:4px;}
+.input-wrap.input-datepicker button {display:flex;align-items:center;justify-content:center;gap:16px;flex:1;text-align:center;padding:14px 8px;}
+.input-wrap.input-datepicker button:after {content:'';flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-datepicker.svg) center center / contain no-repeat;}
+.input-wrap.input-datepicker:focus-within {outline-offset:-1px;outline:1px solid var(--status-focused);}
 
 
 /* input type cheeckbox */
@@ -567,6 +563,7 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
 
 .form-wrap {display:flex;gap:8px;}
 
+
 /* tab-content */ 
 .tab-content {}
 .tab-content .tab-col {position:relative;display:flex;z-index:var(--tab-zIndex);gap:8px;border-bottom:1px solid var(--border-8);background-color:var(--white-100);}
@@ -603,6 +600,7 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
 .tab-content .tab-button li:first-child button:after,
 .tab-content .tab-button li:first-child a:after {display:none;}
  
+.modal__content .tab-content .tab-col {border-bottom:0;}
 
 /* overflow-list */
 .overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;scroll-snap-type:x mandatory;gap:6px;}
@@ -791,6 +789,10 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
     background-color:initial;
     background-image:url(../images/icon_only/icon_fav_active.svg);
 }
+.icon-noresult {
+    -webkit-mask-image:url(../images/icon_only/icon_noresult.svg);
+    mask-image:url(../images/icon_only/icon_noresult.svg);
+}
 
 /* toggle-trigger */
 [data-toggle="toggle-trigger"] .toggle-off {display:block;}
@@ -855,6 +857,16 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
 
 /* table */
 .table-col {}
-.table-col table {}
-.table-col table th {font-size:16px;font-weight:500;color:var(--typography-caption);padding:10px 5px;text-align:center;background-color:var(--surface-surface50);}
-.table-col table td {font-size:16px;font-weight:400;color:var(--typography-body);padding:12px 5px;text-align:center;border-bottom:1px solid var(--border-4);}
+.table-col table {border-top:1px solid var(--border-12);border-bottom:1px solid var(--border-12);}
+.table-col table tr:not(:last-child) > * {border-bottom:1px solid var(--border-4);}
+.table-col table thead th {font-size:16px;font-weight:500;color:var(--typography-body);padding:10px 8px;text-align:center;background-color:var(--surface-surface50);border-bottom:1px solid var(--border-4);}
+.table-col table tbody th {font-size:16px;font-weight:500;color:var(--typography-black);padding:12px 8px;text-align:center;}
+.table-col table tbody td {font-size:16px;font-weight:400;color:var(--typography-body);padding:12px 8px;text-align:center;}
+.table-col table .caption-visible {font-size:14px;font-weight:400;color:var(--typography-caption);text-align:left;}
+
+.table-row {}
+.table-row table {border-top:1px solid var(--border-12);border-bottom:1px solid var(--border-12);}
+.table-row table th {font-size:16px;font-weight:500;color:var(--typography-black);text-align:left;padding:12px 8px;}
+.table-row table td {font-size:16px;font-weight:400;color:var(--typography-body);text-align:left;padding:12px 8px;}
+.table-row table tr:not(:last-child) > * {border-bottom:1px solid var(--border-4);}
+.table-row table .caption-visible {font-size:14px;font-weight:400;color:var(--typography-caption);text-align:left;}
