--- a/html/components/component_table.html
+++ b/html/components/component_table.html
@@ -52,6 +52,7 @@
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
 	<!-- //[plugins] -->
 
+	<!-- ui source -->
 	<link rel="stylesheet" href="../../resources/css/ui-fonts.css">
 	<link rel="stylesheet" href="../../resources/css/ui-variable.css">
 	<link rel="stylesheet" href="../../resources/css/ui-default.css">
@@ -63,81 +64,115 @@
 
 	<script src="../../resources/js/ui-script.js"></script>
 	<script src="../../resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
+	<style>
+	</style>
 	<!-- //ui source -->
-
 </head>
 
 <body>
 	<div class="ui-guide">
-		<h1>Form</h1>
-		<p>Radio</p>
+		<h1>Table</h1>
 
 		<div class="ui-guide-section">
-			<div class="ui-guide-box">
-				<h2>Large</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp inp-large">
-							<label>
-								<input type="radio" name="rad001">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-						<div class="inp inp-large">
-							<label>
-								<input type="radio" name="rad001">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-				</dl>
+			<h2>Table <span>Col</span></h2>
+
+			<div class="table-col">
+				<table>
+					<caption class="caption-visible"><span class="blind">주요 주주</span>(단위: 천원)</caption>
+					<thead>
+						<tr>
+							<th scope="col">주요 주주</th>
+							<th scope="col">지분율</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row" class="al">삼성전자</th>
+							<td class="ar">15.23</td>
+						</tr>
+						<tr>
+							<th scope="row" class="al">국민연금공단</th>
+							<td class="ar">6</td>
+						</tr>
+						<tr>
+							<th scope="row" class="al">우리사주조합</th>
+							<td class="ar">5.9</td>
+						</tr>
+						<tr>
+							<td colspan="2">
+								<p class="description caution body-small d-inflex">조회 데이터가 없습니다.</p>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
-			<hr>
-			<div class="ui-guide-box">
-				<h2>Medium</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp inp-medium">
-							<label>
-								<input type="radio" name="rad002">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-						<div class="inp inp-medium">
-							<label>
-								<input type="radio" name="rad002">
-								<span class="label-title">텍스트를 입력해주세요</span>
-							</label>
-						</div>
-					</dd>
-				</dl>
-			</div>
-			<hr>
-			<div class="ui-guide-box">
-				<h2>Group</h2>
-				<dl>
-					<dt></dt>
-					<dd>
-						<div class="inp-group">
-							<div class="inp inp-medium">
-								<label>
-									<input type="radio" name="rad002">
-									<span class="label-title">과장</span>
-								</label>
-							</div>
-							<div class="inp inp-medium">
-								<label>
-									<input type="radio" name="rad002">
-									<span class="label-title">팀장</span>
-								</label>
-							</div>
-						</div>
-					</dd>
-				</dl>
-			</div>
+
 		</div>
+		<hr>
+
+		<div class="ui-guide-section">
+			<h2>Table <span>row</span></h2>
+
+			<div class="table-row mt24">
+				<table>
+					<caption>기업 프로필</caption>
+					<tbody>
+						<tr>
+							<th scope="row">기업명</th>
+							<td>삼성중공업(주)</td>
+						</tr>
+						<tr>
+							<th scope="row">기업영문명</th>
+							<td>SAMSUNG HEAVY INDUSTRIES CO.,LTD</td>
+						</tr>
+						<tr>
+							<th scope="row">법인(주민)번호</th>
+							<td>110111-01658595</td>
+						</tr>
+						<tr>
+							<th scope="row">사업자번호</th>
+							<td>101-34-56123</td>
+						</tr>
+						<tr>
+							<th scope="row">대표자명</th>
+							<td><button class="anchor underline fc-status-active">가의정</button></td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+						<tr>
+							<th scope="row">설립일</th>
+							<td>1974-08-05</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+
+		</div>
+
+
 	</div>
 </body>
 
