--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -286,6 +286,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 #container {flex:1 1 100%;}
 .content {padding:0 16px 24px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;max-width:100vw;}
 .content-fluid:not(.content) {margin-left:-16px;margin-right:-16px;padding-left:16px;padding-right:16px;}
+.content-fluid:not(.content).px24 {margin-left:-24px;margin-right:-24px;}
 .division-center {flex:1 1 100%;display:flex;justify-content:center;flex-direction:column;padding:16px 0;}
 
 .content.content-fluid > * {margin:0 -16px;}
