--- a/html/components/component_table.html
+++ b/html/components/component_table.html
@@ -46,7 +46,7 @@
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
 	<!-- AOS -->
-	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css">
 	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- freeze-table -->
 	<script src="../../resources/plugins/freeze-table/1.3.0/freeze-table.js"></script>
@@ -76,9 +76,9 @@
 		<div class="ui-guide-section">
 			<h2>Table <span>Col</span></h2>
 
+			<div class="caption-visible"><span class="blind">주요 주주</span>지분율</div>
 			<div class="table-col">
 				<table>
-					<caption class="caption-visible"><span class="blind">주요 주주</span>(단위: 천원)</caption>
 					<thead>
 						<tr>
 							<th scope="col">주요 주주</th>
