--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -238,7 +238,7 @@
 						<div class="divide-list">
 							<span class="divide01">글로벌</span>
 							<div class="division h14 mx8"></div>
-							<span class="divide02">수수료선취 · 온라인</span>
+							<span class="divide02">계열사</span>
 						</div>
 						<dl class="expect-list">
 							<div class="list">
